<resources>
    <string name="app_name">Ambulance Driver</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="register_driver">DRIVER DETAILS</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="driver">DRIVER</string>
    <string name="license_no">License No</string>
    <string name="user">USER</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="exp_date">Expiry Date</string>
    <string name="AddDetail">Edit Details</string>
    <string name="server_url">https://10.0.2.2</string>
    <string name="access_token">pk.eyJ1IjoidGFuYXlhNTA4IiwiYSI6ImNrbHM4N2tnNjFjdTcydm53YWJtNTNoNTQifQ.O-tlugyUNXfqRgV7w0kyyw</string>
    <string name="user_location_permission_not_granted">Location Access Permission Not Granted</string>
    <string name="user_location_permission_explanation">Without Permission Access Cannot Find Your Location</string>
</resources>